--- a/src/index.css
+++ b/src/index.css
@@ -17,11 +17,14 @@ body{
   padding: 0;
 }
 
+
 body{
+  background-image: url('images/iteration-1-images/home-banner.png'); /*burada bir duzenleme*/
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
+
 
 .home-container{
   display: flex;
