--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/*:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -8,11 +8,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+}*/
 
 html,
 body{
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -58,36 +58,79 @@ body{
   background-color: #FDC913;
 }
 
-.form-select{
+/*.order-main{
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
-  border:none;
+  justify-content: center;
+  text-align: start;
+  height: 100%;
+}*/
+
+.order-header{
+  display: flex;
+  flex-direction: column;
+  background-color: #CE2829;
+  width: 100vw;
+  padding-bottom: 25px;
+  align-items: center;
+  justify-self: center;
+  gap: 0.1rem;
 }
 
-.select-radio{
+.order-header img{
+  padding: 2rem;
+  width: 30rem;
+}
+
+.header-nav{
+  width: 40rem;
+}
+
+.order-main{
+  display: flex;
+  flex-direction: column;
+  width: 40rem;
+  align-items: center;
+  justify-self: center;
+  min-height: 86vh;
+}
+/*.order-info,
+.order-form,
+.order-main footer{
+  justify-content: 
+}*/
+
+.order-info-div{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 50px;
+  align-items: center;
+}
+.order-info-div > :nth-child(1){
+  font-size: 30px;
+  text-align: left;
+  margin: 0;
+}
+.order-info-div > :nth-child(2){
+  text-align: right;
+}
+.order-info-div > :nth-child(3){
+  text-align: left;
+}
+
+.form-select{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  border: none;
+}
+
+.select-radio-item,
+.select-option-item{
   display: flex;
   flex-direction: column;
   gap: 10px;
-}
-
-.form-ek{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-  margin: 400px;
-}
-
-.form-ek-info{
-  display: block;
+  margin-top: 10px;
   margin-bottom: 10px;
-}
-
-.checkbox-container{
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-  align-items: center;
+  width: 5rem;
 }
