--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,14 @@
   -moz-osx-font-smoothing: grayscale;
 }*/
 
+*{
+  box-sizing: border-box; 
+}
+
 html,
 body {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -56,149 +61,4 @@ body {
   width: 100px;
   height: 30px;
   background-color: #FDC913;
-}
-
-/*.order-main{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: start;
-  height: 100%;
-}*/
-
-.order-header {
-  display: flex;
-  flex-direction: column;
-  background-color: #CE2829;
-  width: 100vw;
-  padding-bottom: 25px;
-  align-items: center;
-  justify-self: center;
-  gap: 0.1rem;
-}
-
-.order-header img {
-  padding: 2rem;
-  width: 30rem;
-}
-
-.header-nav {
-  width: 40rem;
-}
-
-.order-main {
-  display: flex;
-  flex-direction: column;
-  width: 40rem;
-  align-items: center;
-  justify-self: center;
-  min-height: 86vh;
-}
-
-/*.order-info,
-.order-form,
-.order-main footer{
-  justify-content: 
-}*/
-
-.order-info-div {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 50px;
-  align-items: center;
-}
-
-.order-info-div> :nth-child(1) {
-  font-size: 30px;
-  text-align: left;
-  margin: 0;
-}
-
-.order-info-div> :nth-child(2) {
-  text-align: right;
-}
-
-.order-info-div> :nth-child(3) {
-  text-align: left;
-}
-
-.form-content {
-  width: 40rem;
-}
-
-.form-select {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  border: none;
-}
-
-.select-radio-item,
-.select-option-item {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  width: 5rem;
-}
-
-.form-ekMalzemeler {
-  margin-top: 25px;
-  display: flex;
-  flex-direction: column;
-}
-
-.checkbox-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.isim-not {
-  margin-top: 25px;
-  gap: 5px;
-  display: flex;
-  flex-direction: column;
-}
-
-.footer-content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-
-}
-
-.footer-content button {
-  width: 10rem;
-}
-
-.arttir-azalt {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin-top: 30px;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-.arttir-azalt> :nth-child(1) {
-  width: 80px;
-  height: 80px;
-  margin: 0;
-  padding: 0;
-}
-
-.arttir-azalt> :nth-child(2) {
-  width: 80px;
-  height: 80px;
-  text-align: center;
-  margin: 0;
-  padding: 0;
-}
-
-.arttir-azalt> :nth-child(3) {
-  width: 80px;
-  height: 80px;
-  margin: 0;
-  padding: 0;
 }
