--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
 
 .home-container p {
   padding: 0;
-  margin: 10px;
+  margin: 1%;
   text-align: center;
   font-size: 36px;
   color: #FAF7F2;
