--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,8 @@ body {
 .home-container img {
   padding-top: 20px;
   margin-top: 20px;
-  width: 150px;
-  height: 30px;
+  width: 20rem;
+  height: 5rem;
   color: #FAF7F2;
 }
 
@@ -73,7 +73,7 @@ body {
 
 .succsess-main img{
   margin-top: 5rem;
-  width: 20rem;
+  width: 15rem;
   height: 5rem;
 }
 .succsess-main h1{
